--- a/templates/index.html
+++ b/templates/index.html
@@ -256,7 +256,7 @@
             container.scrollTop = container.scrollHeight;
 
             try {
-                const res = await fetch('http://127.0.0.1:8000/chat', {
+                const res = await fetch('https://phantom-garden.onrender.com', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({ message: text, history: currentHistory, ai_name: aiName })
