--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="Moonloops.mp3" type="audio/mpeg">
+        <source src="Moonloops.MP3" type="audio/mpeg">
     </audio>
 
     <div id="music-toggle" onclick="toggleMusic()">
