--- a/templates/index.html
+++ b/templates/index.html
@@ -78,8 +78,12 @@
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="Moonloops.MP3" type="audio/mpeg">
-    </audio>
+    <source src="Moonloops.mp3" type="audio/mpeg">
+</audio>
+
+<audio id="bg-music" loop>
+    <source src="/templates/Moonloops.MP3" type="audio/mpeg">
+</audio>
 
     <div id="music-toggle" onclick="toggleMusic()">
         <div class="music-bar"></div><div class="music-bar"></div><div class="music-bar"></div>
